# amazing-specialists

./: .gitignore  ADAPTERS.md  AGENTS.md  BACKLOG.md  CHANGELOG.md  README.md  VERSIONING.md  compatibility-matrix.json  compatibility-matrix.schema.json  io-contract.md  package-lifecycle.md  package-lock.json  package-spec.md  package.json  quality-gate.md  role-definition.md
.github/ISSUE_TEMPLATE/: task.md
.opencode/: auto-report-config.schema.json  auto-report.json  secrets-redaction.json
.opencode/commands/: spec-audit.md  spec-implement.md  spec-plan.md  spec-start.md  spec-tasks.md
adapters/: registry.json
adapters/cli-local/: README.md  arg-parser.js  cli-local.config.json  dispatch-normalizer.js  dispatch-validator.js  (+6 more)
docs/: audit-hardening.md  auto-error-report-usage.md  ci-integration-points.md  enhanced-mode-guide.md  enhanced-mode-selector.md  platform-adapter-guide.md  plugin-usage-guide.md  powershell-encoding-pitfalls.md  secrets-redaction-usage.md  skills-usage-guide.md
examples/: README.md  cli-workflow.md  edge-cases.md  failure-cases.md  happy-path.md  local-repo-output.md
plugins/: PLUGIN-SPEC.md  loader.js  registry.json
plugins/python-fastapi/templates/: config.py  main.py  pyproject.toml  requirements.txt
plugins/rust-cargo/templates/: Cargo.toml
scripts/: process-issue.js  report-error-to-issue.js
specs/: common-skills-verification-report.md  m2-skills-integration-verification-report.md  m3-skills-integration-verification-report.md  skill-development-plan.md
templates/: PROFILE-COMPARISON.md  UPGRADE-STRATEGY.md  USAGE.md
(+848 files in other folders)
